update all service classes
